--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
     "lucide-react": "^0.468.0",
+    "motion": "^12.0.0-alpha.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
